# Dev

./: .env.example  .gitignore  .htaccess  3d-house-visualization.html  Dockerfile  Dockerfile.sniper  Export_Annuaire_23022026.xlsx  INSTALLER_POLYMARKET.bat  PLUi_DG_text.txt  PLUi_Lex_text.txt  PLUi_UM_text.txt  README.md  a-propos.html  annuaire-maires-france.html  annuaire-sem-spl-syndicats.html  audit_report.md  auto_trainer.py  backtest_report.html  bot_configs.json  bot_state.json  carte menu pizza export xls  config_manager.py  dashboard_snapshot.html  devis.html  docker-compose.yml  find_transactions_marseille.py  google_play_market_research_2026.md  hedge_fund_bot.py  hourly_report.py  index.html  installer_windows.bat  insurance_bot.py  intraday_bot.py  intraday_fader.py  lancer.bat  mentions-legales.html  news_engine.py  polymarket_client.py  realisations.html  render.yaml  (+11 more)
listing-sniper/: .gitignore  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  sniper_state.json
listing-sniper/config/: .env.example  settings.yaml
listing-sniper/grafana/: prometheus.yml
listing-sniper/grafana/dashboards/: sniper.json
listing-sniper/src/: config.py  main.py  models.py  web_dashboard.py
listing-sniper/src/analysis/: position_sizer.py  risk_assessment.py  token_discovery.py
listing-sniper/src/backtest/: backtester.py  data_collector.py  (+1 more)
listing-sniper/tests/: test_backtester.py  test_exit_strategy.py  test_models.py  test_position_sizer.py  test_risk_manager.py  test_signal_validator.py
(+404 files in other folders)
